<resources>
    <string name="app_name">ActivityAnimations</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sed est mollis, aliquet justo sit amet, rhoncus tortor. Sed et facilisis lorem, ut maximus risus. Ut interdum nibh a ante ullamcorper, sed sollicitudin turpis laoreet. Sed consequat, tortor a congue facilisis, dolor tortor fringilla erat, a dapibus est nulla eu enim. Vivamus tincidunt, lorem at interdum pellentesque, nisi libero vehicula felis, at tincidunt nisi ante non purus. Nullam dapibus tellus sit amet mi accumsan, sit amet molestie est maximus. Sed id odio ac sapien mattis ultrices id sit amet sapien. Sed tristique ornare nunc eu fringilla.Ut rhoncus, eros sit amet gravida aliquet, enim mi pulvinar augue, eget placerat orci neque vel neque. Donec in est velit. Aliquam erat volutpat. Fusce ultrices lorem vitae erat gravida vulputate. Curabitur eget porta nulla, id sagittis ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas dictum sollicitudin tempus.In maximus varius nibh. Suspendisse et quam tortor. Nam risus justo, commodo ac sapien id, suscipit dictum turpis. Aenean scelerisque sagittis nisl, quis dignissim lectus vulputate sed. Etiam commodo libero eget eros bibendum, eget blandit est dignissim. In hac habitasse platea dictumst. Cras euismod porttitor finibus. Nunc luctus, lectus eget eleifend eleifend, dui augue sagittis lacus, at accumsan enim sem ut mi. Praesent ornare nisl at mi interdum cursus.Suspendisse potenti. Etiam accumsan velit velit, id sodales massa fringilla non. Phasellus facilisis elementum felis a rutrum. Donec ornare ligula sed sapien mollis, vel egestas augue malesuada. Nulla vitae consectetur nisi. Duis tempus odio eu tellus feugiat, non dictum nunc scelerisque. Vivamus eu suscipit velit. Fusce in pretium nulla. Nulla facilisi. Donec commodo nisl nibh, ac accumsan orci aliquet a. Curabitur nec urna a magna pretium vehicula vel et tellus. Mauris consequat iaculis laoreet. Etiam eu porta purus, non venenatis felis. Sed elementum, libero sit amet scelerisque viverra, libero massa rutrum diam, in suscipit diam neque vitae ex. Sed sodales fringilla felis, nec tempus ante facilisis ut.Etiam dolor urna, fermentum in turpis vitae, laoreet consequat nisl. Maecenas eu elit risus. Suspendisse ac mollis est. Nullam vestibulum dolor eget gravida congue. Vestibulum dolor sapien, tempus ac semper a, aliquet a nulla. Ut a diam nunc. Curabitur ac elementum diam.</string>
    <string name="transition_avatar">avatar_transition</string>
    <string name="transition_name">name_transition</string>
    <string name="transition_surname">surname_transition</string>
    <string name="transition_actor">actor_transition</string>

</resources>
