<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_user_avatar"
        android:transitionName="@string/transition_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_name"
                android:transitionName="@string/transition_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_user_surname"
                android:transitionName="@string/transition_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textAppearance="@android:style/TextAppearance.Large"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_user_actor"
            android:transitionName="@string/transition_actor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="italic"/>

    </LinearLayout>
</LinearLayout>